# OpenGL-playground

basics/: CMakeLists.txt  Makefile  build.sh
basics/src/: main.c
common/: CMakeLists.txt
